# pwdmanlib

./: CONTRIBUTING.md  README.md  makecerts.sh  makecerts2.sh  requirements.txt  setup.sh
c/: CMakeLists.txt  library.c
c++/: CMakeLists.txt  library.cpp  library.h
certs/: client.key  client.pem  server.key  server.pem
certs2/: client.csr  client.key  rootCA.key  rootCA.pem
certs3/: ca.conf  client.key  rootCA.key  rootCA.pem  server.csr  server.key
certs4/: CAbundle.pem  cert1.key  cert1.pem  cert1.req
certs4/ca-store/: ca-store-test.sh
certs4/certs/: CAbundle.pem  cert1.key  cert1.pem  cert1.req  cert2.key  cert2.pem  cert2.req  ed878112.0
libraries/: CMakeLists.txt
libraries/bii/: .hive.db  settings.bii
libraries/src/: auth.cpp  crypto.cpp  database.cpp  frontend.cpp  library.cpp  library.h  run_server  server.c  server.h
libraries/src/client/: client.c  client.h  client_v2.c
libraries/src/crypto/: crypto.cpp  library.h
libraries/src/gui/: frontend.cpp
libraries/src/server/: fawkes_proto.h  server.c  server.h  server_socket.c
libraries/src/test/: names.txt  oop_test.c  strings.txt  test_data.json  test_fawkes_proto.c  vector-test.c
libraries/src/util/: constants.h  oop.c  oop.h  os_info.c  osinfo.c  vector.c  vector.h
resources/: REFERENCES.md  certs.md  ssl_cert_config.md
src/: CMakeLists.txt
src/client/: client  client.c  client.crt  client.csr  client.h  client.key  client.p12  client.pem  client_v2.c
src/crypto/: CMakeLists.txt  library.cpp  ssl_funcs.h
src/db/: database.h
src/server/: ca.crt  ca.key  fawkes_proto.h  index.html  response.h  server  server.c  server.h
src/test/: db_test.c  nullptrs.c  test_fawkes_proto.c  test_response.c  users.csv
src/util/: arithmetic.h  constants.h  netops.h  oop.h  stringops.h  vector.c
src/validation/: openssl_validation.h
